feature: pii matching tools v1.0.1, name parameter reconstruction (#2)
* feature: pii matching tools v1.0.1, name parameter reconstruction

* feature: change README doc